add hints